fix scrolling transition to stuck state

--- a/app/styles/nypr-ui/_hero.scss
+++ b/app/styles/nypr-ui/_hero.scss
@@ -3,7 +3,7 @@
 
 // used to position gradient
 $padding-h-medium: 30px;
-$padding-v-medium: 75px;
+$padding-v-medium: 55px;
 $padding-h-small:  20px;
 $padding-v-small:  20px;
 
